@@ -1,0 +1,8 @@
+{
+   test suppression of FdBadUse
+   CoreError:FdBadUse
+   fun:_fcntl
+   fun:fcntl
+   fun:main
+}
+
